tests/expectations/compiler/tuple/tuple_in_struct_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:5:9
     |
   5 |         mem: (u8, u16)
     |         ^^^
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:9:9
     |
   9 |         mems: (A, A)
     |         ^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {
     | ^^^^^^^^^^^^
"""]
